--- a/src/exercise/003-operators-exercise/index.html
+++ b/src/exercise/003-operators-exercise/index.html
@@ -18,6 +18,7 @@
       <button class="btn green" id="3">3</button><br />
       <button class="btn green" id="4">4</button><br />
       <button class="btn green" id="5">5</button><br />
+      <input placeholder="Wpisz coś" id="6">
     </div>
     <script src="index.ts"></script>
   </body>
